extensions/wikia/WikiaInteractiveMaps/css/WikiaMaps.wikiamobile.scss
@import "WikiaMapsShared";
@import "includes/wikia/services/css/pagination.scss";

.map-list {
	list-style: none;
	margin: 0;
	padding: 0;

	a {
		display: block;
		margin: 0;
		padding: 0;
		line-height: 0;
	}

	h3 {
		@include map-thumb-title($content-color, $gradient-color-start, $map-item-mobile-max-width);
		line-height: 20px;
	}

	li {
		margin: 0px 0px 1px;
		overflow: hidden;
		position: relative;
 	}
}

.Pagination {
	margin: 6.5% 0 0 0;

	li {
		border: 0;

		a {
			display: block-inline;
			text-align: center;
			vertical-align: middle;
			line-height: 1.2em;
			border-radius: 5px;
			font-size: 1.2em;
		}
	}
}

.error {
	padding: 0 15px;
}

