fixed styling of pagination on mobile, passed custom prev&next messages

--- a/extensions/wikia/WikiaInteractiveMaps/css/WikiaMaps.wikiamobile.scss
+++ b/extensions/wikia/WikiaInteractiveMaps/css/WikiaMaps.wikiamobile.scss
@@ -32,12 +32,13 @@
 		border: 0;
 
 		a {
-			display: block-inline;
-			text-align: center;
-			vertical-align: middle;
-			line-height: 1.2em;
 			border-radius: 5px;
+			display: block-inline;
 			font-size: 1.2em;
+			line-height: 1.2em;
+			text-align: center;
+			padding: 1.2em;
+			vertical-align: middle;
 		}
 	}
 }
